lv/pr: removed file references from ioadapter base and yapraf, modified number parse methods to match cldc